--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,10 @@ cffi==1.14.3
 chardet==3.0.4
 cryptography==3.1.1
 defusedxml==0.7.0rc1
+dj-database-url==0.5.0
 Django==3.1.2
+gunicorn==20.0.4
+psycopg2==2.8.6
 idna==2.10
 oauthlib==3.1.0
 pycparser==2.20
@@ -20,3 +23,4 @@ social-auth-core==3.3.3
 sqlparse==0.4.1
 urllib3==1.25.10
 vk-api==11.9.0
+whitenoise==5.2.0
